--- a/src/utils/awsconfig.json
+++ b/src/utils/awsconfig.json
@@ -1,12 +1,12 @@
 {
   "Auth": {
-    "region": "xx-xxxx-x",
-    "userPoolId": "xx-xxxx-x_xxxxxxxxxx",
-    "identityPoolId": "xx-xxxx-xxxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
-    "userPoolWebClientId": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+    "region": "ca-central-1",
+    "userPoolId": "ca-central-1_TktWex3K8",
+    "identityPoolId": "ca-central-1:3caaf6f6-870f-45dd-bd3d-8673ec03a7d1",
+    "userPoolWebClientId": "1m8v4s36pgebkcdsd7b4k7jkj9x"
   },
   "Storage": {
-    "bucket": "BUCKET_NAME",
-    "region": "xx-xxxx-x"
+    "bucket": "public-legal",
+    "region": "ca-central-1"
   }
 }
